<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>io.artoo</artifactId>
    <groupId>io.artoo</groupId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>io.artoo.honolulu</artifactId>
  <name>Honolulu</name>

  <properties>
    <maven.compiler.source>15</maven.compiler.source>
    <maven.compiler.target>15</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.artoo</groupId>
      <artifactId>io.artoo.fxcalibur</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.5</version>
        <configuration>
          <mainClass>io.artoo.honolulu/io.artoo.honolulu.Main</mainClass>
          <stripDebug>true</stripDebug>
          <compress>2</compress>
          <noHeaderFiles>true</noHeaderFiles>
          <noManPages>true</noManPages>
          <launcher>honolulu</launcher>
          <options>--enable-preview</options>
          <jlinkImageName>honolulu</jlinkImageName>
          <jlinkZipName>honolulu</jlinkZipName>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
